# homework-sync

./: README.md  config.example.py  homework_sync.py  pyproject.toml
